--- a/index.html
+++ b/index.html
@@ -1,66 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Trasta.stream</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="utf-8">
-<link rel="stylesheet" href="static/trasta.css">
-<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet"> 
+<title>Trasta Stream</title>
+<link href="ts.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-<nav class="trasta nav">
-	<div class="trasta nav-logo">
-		<a href="#about"><img src="static/TrastaStream.png"></a>
-	</div>
-	<ul class="trasta nav-options">
-		<li><a href="#contact">Let's Have A Drink</a></li>
-	</ul>
-</nav>
-<main>
-<div class="trasta content" id="content-changer">
-	<div class="trasta about">
-		<h1>Hi There!</h1>
-		<p>This page has nothing interesting about us, please go below to contact us...</p>
-	</div>
-	<div class="trasta button" onclick="contactPage()">Contact Us</div>
+<div class="bg"></div>
+<nav class="ts nav">
+<div class="ts nav-logo">
+<img src="TrastaStreamGradient.png" alt="Trasta Stream Logo" title="Trasta Stream Logo">
 </div>
-</main>
-<footer>
-&copy; 2017 Trasta Stream, All Rights Reserved.
-</footer>
+</nav>
+<div class="ts content">
+<div class="ts content-info"><b>Contact:</b> <a href="mailto:ts@trasta.stream">ts@trasta.stream</a></div>
+</div>
+<div class="ts footer">&copy; 2017-2018 Trasta.stream, All Rights Reserved.</div>
 <script>
-function page_get(url) {
-	var page_list = ["", "#", "#about", "#contact"];
-	var page_titles = ["Trasta.stream", "Trasta.stream", "Trasta.stream", "Contact - Trasta.stream"];
-	var p = page_list.indexOf(url);
-
-	var myPage = ['<div class="trasta about"><h1>Hi There!</h1><p>This page has nothing interesting about us, please go below to contact us...</p></div><div class="trasta button" onclick="contactPage()">Contact Us</div>', '<div class="trasta about"><h1>Hi There!</h1><p>This page has nothing interesting about us, please go below to contact us...</p></div><div class="trasta button" onclick="contactPage()">Contact Us</div>', '<div class="trasta about"><h1>Hi There!</h1><p>This page has nothing interesting about us, please go below to contact us...</p></div><div class="trasta button" onclick="contactPage()">Contact Us</div>', '<div class="trasta about"><h1>Contact</h1><p>ts@trasta.stream</p></div>'];
-
-
-
-	$("#content-changer").html(myPage[p]);
-	window.history.replaceState(page_list[p], page_titles[p], page_list[p]);
-
-}
-
-pageTo();
-
-function pageTo(type) {
-	var page = window.location.hash;
-	
-	page_get(page);
-}
-
-function contactPage() {
-	page_get("#contact");	
-}
-
-$("a").click(function(e) {
-	e.preventDefault();
-	var loc = $(this).attr("href");
-	page_get(loc);
+$(document).ready(function() {
+	$(".bg").fadeIn(800);
+	setTimeout(function() {
+		$(".ts.nav").slideDown(500);
+	}, 1300);
+	setTimeout(function() {
+		$(".ts.content").fadeIn(500);
+		$(".ts.footer").fadeIn(500);
+	}, 1800);
 });
 </script>
 </body>
